--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "discord.js": "^13.1.0",
     "node-fetch": "^2.6.1",
     "puppeteer": "^10.2.0"
+  },
+  "devDependencies": {
+    "prettier-eslint": "^16.3.0"
   }
 }
